got generate doggo working with breed dropdown selector

--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
       <hr />
 
       <button class="btn btn-primary" id="generateDoggoBtn">Generate Doggo</button>
+      <div id="selectBreedContainer">
+        Select a breed of doggo: <select id="selectBreedDropdown">
+        </select></div>
       <div id="doggoContainer"></div>
 
       <hr />
 
-      <div id="selectBreedContainer"></div>
 
     </section>
 
