added basic dog vs cat functionality

--- a/index.html
+++ b/index.html
@@ -66,6 +66,18 @@
       <hr />
 
       <!-- What fun thing can you build here using APIs + AJAX? -->
+      <p>Click the button below to generate a random dog and cat picture. Then click on whichever picture you like more!</p>
+      <button class="btn btn-primary" id="catVsDogBtn">Begin!</button>
+      <div class="scoreContainer">
+        <p style="margin-bottom: 0">SCORE --- Dogs: <span id="dogScore">0</span> || Cats: <span id="catScore">0</span></p>
+        
+      </div>
+
+      <div class="vsContainer">
+        <div id="dogVsContainer"></div>
+        <div id="catVsContainer"></div>
+      </div>
+
 
     </section>
 
